crates/cadenza-syntax/src/snapshots/cadenza_syntax__parse__tests__example_op-sub.snap
---
source: crates/cadenza-syntax/src/parse.rs
expression: a - b
---
NodeRoot@0..5
  NodeApply@0..5
    NodeApplyArgument@0..2
      Identifier@0..1 "a"
      Space@1..2 " "
    NodeApplyReceiver@2..3
      Minus@2..3 "-"
    Space@3..4 " "
    NodeApplyArgument@4..5
      Identifier@4..5 "b"
