crates/cadenza-syntax/src/snapshots/cadenza_syntax__parse__tests__example_ws-block.snap
---
source: crates/cadenza-syntax/src/parse.rs
expression: "let foo = # comment here\n    let bar = 123 # other comment here\n    bar\n"
---
NodeRoot@0..72
  NodeApply@0..72
    NodeApplyArgument@0..8
      NodeApply@0..8
        NodeApplyReceiver@0..4
          Identifier@0..3 "let"
          Space@3..4 " "
        NodeApplyArgument@4..8
          Identifier@4..7 "foo"
          Space@7..8 " "
    NodeApplyReceiver@8..9
      Equal@8..9 "="
    Space@9..10 " "
    CommentStart@10..11 "#"
    CommentContent@11..24 " comment here"
    Newline@24..25 "\n"
    Space@25..29 "    "
    NodeApplyArgument@29..72
      NodeApply@29..72
        NodeApplyReceiver@29..68
          NodeApply@29..68
            NodeApplyArgument@29..37
              NodeApply@29..37
                NodeApplyReceiver@29..33
                  Identifier@29..32 "let"
                  Space@32..33 " "
                NodeApplyArgument@33..37
                  Identifier@33..36 "bar"
                  Space@36..37 " "
            NodeApplyReceiver@37..38
              Equal@37..38 "="
            Space@38..39 " "
            NodeApplyArgument@39..68
              NodeLiteral@39..42
                NodeLiteralValue@39..42
                  Integer@39..42 "123"
              Space@42..43 " "
              CommentStart@43..44 "#"
              CommentContent@44..63 " other comment here"
              Newline@63..64 "\n"
              Space@64..68 "    "
        NodeApplyArgument@68..72
          Identifier@68..71 "bar"
          Newline@71..72 "\n"
