crates/cadenza-syntax/src/snapshots/cadenza_syntax__parse__tests__example_ws-paren.snap
---
source: crates/cadenza-syntax/src/parse.rs
expression: "foo (\n    a + b\n) c d e + f\n"
---
NodeRoot@0..28
  NodeApply@0..28
    NodeApplyReceiver@0..22
      NodeApply@0..22
        NodeApplyReceiver@0..20
          NodeApply@0..20
            NodeApplyReceiver@0..18
              NodeApply@0..18
                NodeApplyReceiver@0..4
                  Identifier@0..3 "foo"
                  Space@3..4 " "
                NodeApplyArgument@4..18
                  NodeApply@4..16
                    NodeApplyArgument@4..12
                      LParen@4..5 "("
                      Newline@5..6 "\n"
                      Space@6..10 "    "
                      Identifier@10..11 "a"
                      Space@11..12 " "
                    NodeApplyReceiver@12..13
                      Plus@12..13 "+"
                    Space@13..14 " "
                    NodeApplyArgument@14..16
                      Identifier@14..15 "b"
                      Newline@15..16 "\n"
                  RParen@16..17 ")"
                  Space@17..18 " "
            NodeApplyArgument@18..20
              Identifier@18..19 "c"
              Space@19..20 " "
        NodeApplyArgument@20..22
          Identifier@20..21 "d"
          Space@21..22 " "
    NodeApplyArgument@22..28
      NodeApply@22..28
        NodeApplyArgument@22..24
          Identifier@22..23 "e"
          Space@23..24 " "
        NodeApplyReceiver@24..25
          Plus@24..25 "+"
        Space@25..26 " "
        NodeApplyArgument@26..28
          Identifier@26..27 "f"
          Newline@27..28 "\n"
