crates/cadenza-syntax/src/snapshots/cadenza_syntax__parse__tests__literal_float.snap
---
source: crates/cadenza-syntax/src/parse.rs
expression: "parse(\"3.14\")"
---
NodeRoot@0..4
  NodeLiteral@0..4
    NodeLiteralValue@0..4
      Float@0..4 "3.14"
