crates/cadenza-syntax/src/snapshots/cadenza_syntax__parse__tests__literal_integer.snap
---
source: crates/cadenza-syntax/src/parse.rs
expression: "parse(\"42\")"
---
NodeRoot@0..2
  NodeLiteral@0..2
    NodeLiteralValue@0..2
      Integer@0..2 "42"
