crates/cadenza-syntax/src/snapshots/cadenza_syntax__parse__tests__literal_string.snap
---
source: crates/cadenza-syntax/src/parse.rs
expression: "parse(r#\"\"hello world\"\"#)"
---
NodeRoot@0..13
  NodeLiteral@0..13
    StringStart@0..1 "\""
    NodeLiteralValue@1..12
      StringContent@1..12 "hello world"
    StringEnd@12..13 "\""
