crates/cadenza-syntax/src/snapshots/cadenza_syntax__parse__tests__multiple_attrs.snap
---
source: crates/cadenza-syntax/src/parse.rs
expression: "parse(\"@alias s\\n@si\")"
---
NodeRoot@0..12
  NodeAttr@0..9
    At@0..1 "@"
    NodeApply@1..9
      NodeApplyReceiver@1..7
        Identifier@1..6 "alias"
        Space@6..7 " "
      NodeApplyArgument@7..9
        Identifier@7..8 "s"
        Newline@8..9 "\n"
  NodeAttr@9..12
    At@9..10 "@"
    Identifier@10..12 "si"
