crates/cadenza-syntax/src/snapshots/cadenza_syntax__parse__tests__multiple_literals.snap
---
source: crates/cadenza-syntax/src/parse.rs
expression: "parse(\"42 3.14\")"
---
NodeRoot@0..7
  NodeLiteral@0..2
    NodeLiteralValue@0..2
      Integer@0..2 "42"
  Space@2..3 " "
  NodeLiteral@3..7
    NodeLiteralValue@3..7
      Float@3..7 "3.14"
